k8s/cilium/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: main-gateway
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-macca.casa
spec:
  gatewayClassName: cilium
  listeners:
    - name: macca.casa-http # redirect
      port: 80
      protocol: HTTP
      hostname: "*.macca.casa"
      allowedRoutes:
        namespaces:
          from: All
